# people_detection

./: .ICEauthority  .gitignore  .xsession-errors  .xsession-errors.old  CMakeLists.txt  README.md  package.xml  updates
action/: HumanCentered.action
calibration/: K.npy  dist.npy  error.npy
launch/: calibrate_cams.launch  camera_basic_launch.launch  camera_dual_launch.launch  center_human_launch.launch  converteruser.launch  depth_users.launch  fishcam.launch  fixed_users_sim.launch  hosts.machine  human_detector_launch.launch  openpose.yaml  openpose_basic.launch  openpose_giraff_complete.launch  openpose_inference_launch.launch  openposeinference.launch  openposelaunch.launch  proc_image_launch.launch  pru.launch  show_window.launch  simulator_humans.yaml  turn_robot_launch.launch  user_simulator.launch  window_show.launch
msg/: BodyPart.msg  BodyPart3D.msg  DepthArray.msg  Human.msg  HumanArray.msg  HumanArray2.msg  HumanDepth.msg  ImageDepthHuman.msg  PeopleGoalArray.msg  PersonGoal.msg  User.msg  User3D.msg  User3DArray.msg  UserArray.msg  UserRGBD.msg  UserRGBDArray.msg
scripts/: User2Person  User2Person2  calibrate_fish_node  calibration_fish_rgbd.py  calibrator.py  camera_dual  camera_fish  center_human_server  center_human_test  cocoparts.py  estimator2.py  fixed_users  fixed_usersc  generator_usersc  openpose_basic  openpose_inference  openpose_new  pointcloud2msg.py  proc_depth.py  proc_depth_node  proc_human_basic  proc_human_node  proc_image.py  turn_robot_node  window2
scripts/simulations/: generator_users
srv/: ChangeCam.srv  ChangeFrecDetection.srv  NoHuman.srv  StartDetectionHuman.srv
